# Dronemaster

./: LICENSE  README.md  pyproject.toml
examples/: 01_simple_flight.py  02_status.py  03_video.py  04_wifi.py  05_multi_drone.py
scripts/: upload.sh
src/dronemaster/: Drone.py  __init__.py  __main__.py  low_level.py  simulator.py  utils.py
tests/: ext.py  flight.py
