[project]
name = "dronemaster"
version = "0.0.2"
authors = [
  { name="Noah", email="82201000+Nopro263@users.noreply.github.com" },
]
description = "A modern alternative to the robomaster SDK"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Nopro263/Dronemaster"
Issues = "https://github.com/Nopro263/Dronemaster/issues"