[project]
name = "dronemaster"
version = "1.1.0"
authors = [
  { name="Noah Rottermanner" },
]
description = "A modern alternative to the robomaster SDK"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "AGPL-3.0"
license-files = ["LICEN[CS]E*"]
keywords = ["dji","tello","Tello EDU","robomaster"]

[project.urls]
Homepage = "https://github.com/Nopro263/Dronemaster"
Issues = "https://github.com/Nopro263/Dronemaster/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
simulator = ["opencv-python"]